flask+pgsql/pgsql-test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: pgsql-test
  name: pgsql-test
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pgsql-test
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/my-prj-net: "true"
        io.kompose.service: pgsql-test
    spec:
      containers:
        - env:
            - name: PGDATA
              value: /var/lib/postgresql/data/data_db_test
            - name: POSTGRES_DB
              value: db_test
            - name: POSTGRES_PASSWORD
              value: db_password
            - name: POSTGRES_USER
              value: db_user
          image: postgres
          name: pgsql-test
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data/data_db_test
              name: pgsql-data
      restartPolicy: Always
      volumes:
        - name: pgsql-data
          persistentVolumeClaim:
            claimName: pgsql-data
status: {}
