flask+pgsql/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.org/server-snippets: |
      error_page 405 =200 @405;
      location @405 {
        root /srv/http;
        proxy_method GET;
        proxy_pass http://local.test.by;
      }
      location ~ (/|/posts) {
        proxy_pass http://local.test.by;
        proxy_set_header X-Real-IP $remote_addr;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_set_header Host $http_host;
        proxy_set_header X-NginX-Proxy true;
      }
spec:
  rules:
    - host: local.test.by
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-test
                port:
                  number: 5050
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: flask-test
                port:
                  number: 5050
